--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,12 +10,14 @@
     <link rel="stylesheet" href="./node_modules/slick-carousel/slick/slick-theme.css">
     <link rel="stylesheet" href="./node_modules/aos/dist/aos.css">
 </head>
+
 <body>
 
     <nav>
         <div id="logo">DON復古相機專賣</div>
+        <div></div>
         <a href="#">首頁</a>
-        <a href="#">關於DON復古相機專賣</a>
+        <a href="#">關於復古相機</a>
     </nav>
 
     <div id="banner">
@@ -22,9 +25,44 @@
         <img src="./img/photo2.jpg" alt="相機">
         <img src="./img/photo3.jpg" alt="相機">
     </div>
+
+    <section id="about">
+        <img src="./img/phone.png" alt="手機">
+        <div>
+            <h1>Lorem, ipsum dolor.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, neque.</p>
+        </div>
+    </section>
+
+    <section id="about">
+        <img src="./img/phone.png" alt="手機">
+        <div>
+            <h1>Lorem, ipsum dolor.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, neque.</p>
+        </div>
+    </section>
+
+    <div id="brand">
+        <img src="./img/brand.png" alt="ig">
+        <img src="./img/brand.png" alt="ig">
+        <img src="./img/brand.png" alt="ig">
+        <img src="./img/brand.png" alt="ig">
+        <img src="./img/brand.png" alt="ig">
+        <img src="./img/brand.png" alt="ig">
+        <img src="./img/brand.png" alt="ig">
+        <img src="./img/brand.png" alt="ig">
+
+
+    </div>
+    
+    <footer>
+        &copy;dong DESING 
+    </footer>
     <!-- JQ -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/slick-carousel/slick/slick.min.js"></script>
     <script src="./node_modules/aos/dist/aos.js"></script>
+    <script src="./main.js"></script>
 </body>
+
 </html>
