--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <link rel="stylesheet" href="./node_modules/slick-carousel/slick/slick.css">
     <link rel="stylesheet" href="./node_modules/slick-carousel/slick/slick-theme.css">
     <link rel="stylesheet" href="./node_modules/aos/dist/aos.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
     <nav>
-        <div id="logo">DON復古相機專賣</div>
+        <div id="logo">復古相機專賣</div>
         <div></div>
         <a href="#">首頁</a>
         <a href="#">關於復古相機</a>
     </nav>
 
     <div id="banner">
-        <img src="./img/photo1.jpg" alt="相機">
-        <img src="./img/photo2.jpg" alt="相機">
         <img src="./img/photo3.jpg" alt="相機">
+        <img src="./img/camera.jpg" alt="相機">
+        <img src="./img/camera3.jpg" alt="相機">
     </div>
 
     <section id="about">
@@ -34,7 +35,7 @@
         </div>
     </section>
 
-    <section id="about">
+    <section id="about2">
         <img src="./img/phone.png" alt="手機">
         <div>
             <h1>Lorem, ipsum dolor.</h1>
@@ -56,8 +57,9 @@
     </div>
     
     <footer>
-        &copy;dong DESING 
+        &copy; dong DESING 0970-00-000
     </footer>
+
     <!-- JQ -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/slick-carousel/slick/slick.min.js"></script>
