--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     </div>
 
     <section id="about">
-        <img src="./img/phone.png" alt="手機">
-        <div>
+        <img src="./img/phone.png" alt="手機" data-aos="fade-right">
+        <div data-aos="fade-left" data-aos-delay="300" data-aos-offset="300">
             <h1>Lorem, ipsum dolor.</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, neque.</p>
         </div>
     </section>
 
     <section id="about2">
-        <img src="./img/phone.png" alt="手機">
-        <div>
+        <img src="./img/phone.png" alt="手機" data-aos="fade-left" data-aos-delay="300" data-aos-offset="300">
+        <div data-aos="fade-right">
             <h1>Lorem, ipsum dolor.</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, neque.</p>
         </div>
@@ -57,7 +57,7 @@
     </div>
     
     <footer>
-        &copy; dong DESING 0970-00-000
+        &copy; dong DESING 0970-0000-00
     </footer>
 
     <!-- JQ -->
